--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <div class="container">
       <h1>Compteur</h1>
+      <button id="compteur">Incrément : <span>0</span></button>
     </div>
-    <script src="app.js"></script>
+    <script src="dist/app.js"></script>
   </body>
 </html>
